# convex_hull_membership

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
cmake/: catch2.cmake  libigl-predicates.cmake
include/convex_hull_membership/: contains.h
tests/: test_convex_hull_membership.cpp
